--- a/views/account_asset_views.xml
+++ b/views/account_asset_views.xml
@@ -276,7 +276,7 @@
         <field name="name">account.asset.asset.purchase.tree</field>
         <field name="model">account.asset.asset</field>
         <field name="arch" type="xml">
-            <tree string="Assets" decoration-info="(state == 'draft')" decoration-muted="(state == 'close')">
+            <tree string="Activos" decoration-info="(state == 'draft')" decoration-muted="(state == 'close')">
                 <field name="name"/>
                 <field name="category_id" string="Asset Category"/>
                 <field name="date"/>
