--- a/wizard/asset_depreciation_confirmation_wizard_views.xml
+++ b/wizard/asset_depreciation_confirmation_wizard_views.xml
@@ -5,19 +5,19 @@
         <field name="name">asset.depreciation.confirmation.wizard</field>
         <field name="model">asset.depreciation.confirmation.wizard</field>
         <field name="arch" type="xml">
-            <form string="Compute Asset">
+            <form string="Calcular el activo">
                 <div>
                     <p>
-                        This wizard will post installment/depreciation lines for the selected month.<br/>
-                        This will generate journal entries for all related installment lines on this period of asset/revenue recognition as well.
+                        Este asistente publicará líneas de pago / depreciación para el mes seleccionado. <br/>
+                         Esto generará asientos de diario para todas las líneas de pagos relacionadas en este período de reconocimiento de activos / ingresos también.
                     </p> 
                 </div>
                 <group>
                     <field name="date"/>
                 </group>
                 <footer>
-                    <button string="Generate Entries" name="asset_compute" type="object" class="btn-primary"/>
-                    <button string="Cancel" class="btn-secondary" special="cancel"/>
+                    <button string="Generar Entradas" name="asset_compute" type="object" class="btn-primary"/>
+                    <button string="Cancelar" class="btn-secondary" special="cancel"/>
                 </footer>
             </form>
          </field>
@@ -33,7 +33,7 @@
         <field name="context">{'asset_type': 'purchase'}</field>
     </record>
 
-    <menuitem name="Generate Assets Entries"
+    <menuitem name="Generar entradas de activos"
               action="action_asset_depreciation_confirmation_wizard"
               id="menu_asset_depreciation_confirmation_wizard"
               parent="account.menu_finance_entries_generate_entries"
