--- a/wizard/asset_depreciation_confirmation_wizard_views.xml
+++ b/wizard/asset_depreciation_confirmation_wizard_views.xml
@@ -24,7 +24,7 @@
     </record>
 
     <record id="action_asset_depreciation_confirmation_wizard" model="ir.actions.act_window">
-        <field name="name">Post Depreciation Lines</field>
+        <field name="name">Líneas de Depreciación Post</field>
         <field name="res_model">asset.depreciation.confirmation.wizard</field>
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
